Full stylization work

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <link rel="stylesheet" href="assets/CSS/style.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
         </head>
         <body>
                 <header class="container" id="top">
@@ -17,7 +18,7 @@
                 <main class="container">
                 <div class="calc">
                     <section id="standings">
-                        <iframe width='100%' height='600px' frameborder='0'  
+                        <iframe width='100%' height='800px' frameborder='0'  
                         allowfullscreen src='https://braacket.com/league/CentralARUltimateLeague/ranking/234185F7-4260-4DC6-B310-66718A4ADB3B?rows=20&cols=&page=1&page_cols=1&game_character=&country=&search=&embed=1'>
                     </iframe>
                     </section>
